adding cam movement

--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -2,10 +2,33 @@
     margin: 0;
     box-sizing: border-box;
 
+    body{
+        width: 100vw;
+        height: 100vh
+        overflow hidden
+    }
+
+
     canvas.tex {
         position: absolute;
         top: 0;
         left: 0;
         z-index: 3;
     }
+
+    .back{
+        position absolute
+        top:0
+        left:0
+        z-index: 2
+    }
+
+    .arrows{
+        display: flex;
+        align-items: center
+        justify-content: space-between
+        width: 100vw;
+        height: 100vh;
+        position: absolute
+        }
 }
